--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,7 +3,7 @@
 <% @articles.each do |article| %>
   <li>
     <a href "/articles/<%=articles.id%>">
-      <%article.title%>
+      <% @article.title%>
     </a>
   </li>
 <% end %>
