--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -6,5 +6,10 @@
   <body>
     <h1><%= @article.title %></h1>
     <p><%= @article.content %></p>
+    
+    <form method="post" action="/articles/<%= @article.id %>">
+      <input id="hidden" type="hidden" name="_method" value="delete">
+      <input type="submit" value="delete">
+      </form>
   </body>
 </html>
