--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,8 +2,7 @@
 
 <% @articles.each do |article| %>
   <li>
-    <a href "/articles/<%=articles.id%>">
-      <% @article.title%>
+    <a href="/articles/<%=article.title %>">
     </a>
   </li>
 <% end %>
