--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,6 +1,11 @@
 <h1><%= @article.title %></h1>
 <%= @article.content %>
-<form method='post' action='/articles/<%= @article.id %>'>
+<form method='post' action=/"articles/<%= article.id %>"">
+  <input type='hidden' name='method' value='submit'>
+  <input type='submit' value="submit"/>
+</form>
+
+<form method='post' action=/"articles/<%= article.id %>"">
   <input type='hidden' name='method' value='delete'>
-  <input type='submit'/>
+  <input type='submit' value="DELETE"/>
 </form>
