--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -3,6 +3,6 @@
 
 
 <form method='post' action="/articles/<%= @article.id %>">
-  <input type='hidden' name='_method' value='delete'>
+  <input type='hidden' name='method' value='delete'>
   <input type='submit' value="delete"/>
 </form>
