--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,6 +1,6 @@
 <h2>Editing Article <%= @article.id %></h2>
 <form action="/articles/<%= @article.id %>" method="post">
-<input id="hidden" type="hidden" name="_method" value="patch">
+<input id="hidden" type="hidden" name="_method" value="PATCH">
   <p>Title: <input type="text" name="title" value="<%= @article.title %>"></p>
   <p>Content: <input type="text" name="content" value="<%= @article.content %>"></p>
   <input type="submit" value="submit">
