--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,2 +1,8 @@
 <h1><%= @article.title%></h1>
 <p><%= @article.content%></p>
+<br>
+<br>
+<form action="/articles/<%=@article.id%>" method="post">
+  <input type="hidden" name="_method" value="DELETE"/>
+  <input type="submit"/>
+</form>
